<resources>
    <string name="app_name">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Overview">Overview</string>
    <string name="Portfolio">Portfolio</string>
    <string name="Team">Team</string>
    <string name="Clients">Clients</string>
    <string name="Testimonial">Testimonial</string>
    <string name="Methodology">Methodology</string>
    <string name="Social">Social</string>
    <string name="FAQ">FAQ</string>
    <string name="Rating">Rate this App</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
